# nicokara-automake

./: .gitignore  1.out  AGENTS.md  README.md  ai_generated_build_nicokara.py  ai_generated_json_to_srt.py  build_nicokara_video.py  gdyg.txt  json_convert_srt.py  kks_convert.py  lyrics_line_timestamp.py  pyproject.toml
docs/: 中文使用说明.md  中文架构说明.md  评测标准.md
licenses/: THIRD_PARTY_NOTICES.md
licenses/references/: reading_heteronymous_logograms.bib
nicokara/: __init__.py  alignment.py  ass.py  convert.py  demucs_runner.py  fonts.py  media.py  pipeline.py  ruby_diagnostics.py  srt.py
worklog/: 260321.md  260401.md
